--- a/main/webapp/css/global.css
+++ b/main/webapp/css/global.css
@@ -5,15 +5,24 @@
 #login-div {
     color: #333;
     position: fixed;
-    right: 10px;
-    top: 10px;
-    opacity: .3;
     width: 50px;
     height: 50px;
-    cursor: pointer;
     font-size: 50px;
+    top: 10px;
+    right: 10px;
+    opacity: .3;
+    cursor: pointer;
     
     transition: .3s opacity;
+}
+
+#data-div {
+    padding: 5px;
+    color: #333;
+    background: #999;
+    position: fixed;
+    top: 10px;
+    left: 10px;
 }
 
 #login-div:hover {
