--- a/main/webapp/css/home.css
+++ b/main/webapp/css/home.css
@@ -29,3 +29,30 @@ html, body {
 #create-maze-link:hover {
     background: rgba(0,0,0,.3);
 }
+
+#mazes-error-div {
+    text-align: center;
+    color: #F00;
+}
+
+#mazes-wrapper > .maze {
+    border: 1px solid #000;
+    position: relative;
+    height: 50px;
+}
+
+#mazes-wrapper > .maze > .play-icon {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    right: 0;
+    top: 0;
+    font-size: 30px;
+    line-height: 50px;
+    text-align: center;
+}
+
+.play-icon, .play-icon:hover, .play-icon:focus, .play-icon:active {
+    text-decoration: none;
+    color: #333;
+}
